# bgldb

./: .gitignore  :w  Cargo.toml  Dockerfile  compose.yaml  flake.nix  test
.direnv/: flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
database/: '  Cargo.toml
database/.direnv/: flake-profile-1-link
database/btree/: Cargo.toml
database/btree/src/: bptree.rs  btree.rs  main.rs
database/btree/src/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
database/btree_file/: test
database/btree_file/src/: main.rs
database/bytefiletesting/: Cargo.toml
database/bytefiletesting/src/: lol  main.rs
database/first_iteration/src/: database.rs  main.rs  people
database/initial_db/: Cargo.toml
database/initial_db/src/: db.rs  main.rs
database/shittydb/: Cargo.toml  people  people.temp  test
database/shittydb/src/: main.rs
database/slotmap_btree/: Cargo.toml
database/slotmap_btree/src/: bptree.rs  main.rs
database/src/: db.rs  main.rs
report/: flake.nix  main.typ
report/.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
report/chapters/: analyse.typ  design.typ  diskussion.typ  foranalyse.typ  implementering.typ  indledning.typ  konklusion.typ  kravsspecifikation.typ  metode.typ  overdragelse.typ  problemformulering.typ  redegoerelse.typ  test.typ
report/src/: bibliography.bib  project.typ
src/: .db  database.rs  databasehandler.rs  filehandler.rs  fileutil.rs  handler.rs  main.rs  page.rs  pagetypes.rs  test
src/database/: database.rs  handler.rs  mod.rs  page.rs
(+18 files in other folders)
