[package]
name = "btree_file"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "tokio"] }
extract = "0.1.1"
nom = { version = "8.0.0", features = ["alloc"] }
serde = "1.0.228"
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
